--- a/home.html
+++ b/home.html
@@ -158,14 +158,14 @@ background-color: #111;
 <div class="headerwrapper">
 
 <div class="header">
-<h1 class="title"><a href="jordanc.org">Jordan C.</a></h1>
+<h1 class="title"><a href="www.jordanc.org">Jordan C.</a></h1>
 </div>
 
 <div class="nav">
 <ul>
-<li><a href="jordanc.org/aboutme">About Me</a></li>
-<li><a href="jordanc.org/projects">Projects</a></li>
-<li><a href="jordanc.org/contact"</a></li>
+<li><a href="www.jordanc.org/aboutme">About Me</a></li>
+<li><a href="www.jordanc.org/projects">Projects</a></li>
+<li><a href="www.jordanc.org/contact"</a></li>
 </ul>
 </div>
 
