--- a/home.html
+++ b/home.html
@@ -163,9 +163,9 @@ background-color: #111;
 
 <div class="nav">
 <ul>
-<li><a href="www.jordanc.org/aboutme">About Me</a></li>
-<li><a href="www.jordanc.org/projects">Projects</a></li>
-<li><a href="www.jordanc.org/contact"</a></li>
+<li><a href="aboutme.html">About Me</a></li>
+<li><a href="projects.html">Projects</a></li>
+<li><a href="contact.html"</a></li>
 </ul>
 </div>
 
