--- a/home.html
+++ b/home.html
@@ -158,7 +158,7 @@ background-color: #111;
 <div class="headerwrapper">
 
 <div class="header">
-<h1 class="title"><a href="www.jordanc.org">Jordan C.</a></h1>
+<h1 class="title"><a href="home.html">Jordan C.</a></h1>
 </div>
 
 <div class="nav">
